<resources>
    <string name="app_name">Submission_3_Alexandro</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Films</string>
    <string name="tab_text_2">Tv Show</string>
    <string name="name_film">Nama Film</string>
    <string name="Duration">Durasi</string>
    <string name="Release_Date">Tanggal Rilis</string>
    <string name="Detail">Rincian</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="name_tvshow">nama tv show</string>
    <string name="Duration_Tvshow">durasi tv show</string>
    <string name="Detail_tvshow">detail</string>
    <string name="Release_Date_tvshow">rilis tv show</string>

    <string-array name="data_name">
        <item>A Star Is Born</item>
        <item>AQUAMAN</item>
        <item>The Avengers : Infinity War</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumbble Bee</item>
        <item>Creed 2</item>
        <item>DEADPOOL</item>
        <item>How To Train Your Dragon : The Hidden World</item>
        <item>GLASS</item>
    </string-array>

    <string-array name="data_duration">
        <item>2 Hour</item>
        <item>1 Hour</item>
        <item>3 Hour</item>
        <item>2 Hour</item>
        <item>2 Hour</item>
        <item>1 Hour</item>
        <item>2 Hour</item>
        <item>4 Hour</item>
        <item>3 Hour</item>
        <item>2 Hour</item>
    </string-array>

    <string-array name="data_release_date">
        <item>May 10, 2018</item>
        <item>Oct 2, 2019</item>
        <item>May 19, 2017</item>
        <item>Aug 10, 2016</item>
        <item>May 15, 2019</item>
        <item>Mar 12, 2018</item>
        <item>Des 10, 2018</item>
        <item>Jan 5, 2018</item>
        <item>Feb 13, 2017</item>
        <item>Aug 14, 2018</item>
    </string-array>

    <string-array name="data_description">
        <item>Seasoned musician Jackson Maine discovers and falls in love with struggling artist Ally. She has just about given up on her dream to make it big as a singer until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his family\'s past, Adonis Creed is up against the challenge of his life.</item>
        <item>Deadpool tells the origin story of former Special Forces operative turned mercenary Wade Wilson, who after being subjected to a rogue experiment that leaves him with accelerated healing powers, adopts the alter ego Deadpool. Armed with his new abilities and a dark, twisted sense of humor, Deadpool hunts down the man who nearly destroyed his life.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
    </string-array>

    <array name="data_photo">
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_glass</item>
    </array>
</resources>
